[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/spaceship.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://Explosion.tscn" type="PackedScene" id=3]
[ext_resource path="res://Engine.tscn" type="PackedScene" id=4]

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )
Explosion = ExtResource( 3 )

[node name="TopLeftEngine" parent="." instance=ExtResource( 4 )]
position = Vector2( 16.856, -31.0899 )

[node name="TopRightEngine" parent="." instance=ExtResource( 4 )]
position = Vector2( 18.7289, 34.0865 )

[node name="BottomLeftEngine" parent="." instance=ExtResource( 4 )]
position = Vector2( -28.8424, -35.2102 )
rotation = -3.14083

[node name="BottomRightEngine" parent="." instance=ExtResource( 4 )]
position = Vector2( -26.9695, 37.0831 )
rotation = -3.14009

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="."]
visible = false
rotation = 1.5708
polygon = PoolVector2Array( -9, -48, 9.5, -48.5, 14, -15.5, 24.5, -11.5, 25.5, -17.5, 36.5, -19, 44.5, -3, 54, -2.5, 57, -8, 62.5, -8, 60.5, 24, 18, 36.5, 9.5, 49, -8, 50, -17, 35.5, -60, 25.5, -64.5, -7.5, -57.5, -8.5, -54, -3, -42, -6, -37, -18.5, -24.5, -18.5, -25, -11.5, -13, -16.5 )

[node name="Explosion" parent="." instance=ExtResource( 3 )]
position = Vector2( -5.24408, -3.74577 )
scale = Vector2( 2.94312, 2.94312 )
